--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     let isConnected = false;
     let peerConnection;
     let dataChannel;
+    let connectionTimeout;
 
     const statusElement = document.getElementById('status');
     const codeDisplayElement = document.getElementById('codeDisplay');
@@ -46,8 +47,10 @@
     statusElement.textContent = 'Generating code...';
 
     const socket = new WebSocket('wss://signaling-server-zc6m.onrender.com');
+    console.log('WebSocket created for code:', code);
 
     socket.onopen = () => {
+      console.log('WebSocket opened, sending join for code:', code);
       socket.send(JSON.stringify({ type: 'join', code }));
       statusElement.textContent = 'Waiting for connection...';
     };
@@ -55,23 +58,41 @@
     socket.onerror = (error) => {
       statusElement.textContent = 'WebSocket error. Please try again.';
       console.error('WebSocket error:', error);
+      clearTimeout(connectionTimeout);
+    };
+
+    socket.onclose = () => {
+      statusElement.textContent = 'WebSocket closed. Please refresh.';
+      console.error('WebSocket closed');
+      clearTimeout(connectionTimeout);
     };
 
     socket.onmessage = (event) => {
-      const message = JSON.parse(event.data);
-      if (message.type === 'join' && message.code === code && !isInitiator) {
-        isInitiator = true;
-        startPeerConnection();
-      } else if (message.type === 'offer') {
-        handleOffer(message.offer);
-      } else if (message.type === 'answer') {
-        handleAnswer(message.answer);
-      } else if (message.type === 'candidate') {
-        handleCandidate(message.candidate);
+      console.log('Received WebSocket message:', event.data);
+      try {
+        const message = JSON.parse(event.data);
+        console.log('Parsed message:', message);
+        if (message.type === 'join-notify' && message.code === code && !isInitiator) {
+          console.log('Join-notify received, becoming initiator for code:', code);
+          isInitiator = true;
+          startPeerConnection();
+        } else if (message.type === 'offer') {
+          console.log('Received offer for code:', code);
+          handleOffer(message.offer, message.code);
+        } else if (message.type === 'answer') {
+          console.log('Received answer for code:', code);
+          handleAnswer(message.answer);
+        } else if (message.type === 'candidate') {
+          console.log('Received ICE candidate for code:', code);
+          handleCandidate(message.candidate);
+        }
+      } catch (error) {
+        console.error('Error parsing message:', error);
       }
     };
 
     function startPeerConnection() {
+      console.log('Starting peer connection for code:', code);
       peerConnection = new RTCPeerConnection({
         iceServers: [{ urls: 'stun:stun.l.google.com:19302' }]
       });
@@ -80,11 +101,14 @@
       dataChannel.onopen = () => {
         isConnected = true;
         statusElement.textContent = 'Connected!';
+        console.log('Data channel opened for code:', code);
         document.getElementById('connectContainer').classList.add('hidden');
         document.getElementById('chatContainer').classList.remove('hidden');
         document.getElementById('newSessionButton').classList.remove('hidden');
+        clearTimeout(connectionTimeout);
       };
       dataChannel.onmessage = (event) => {
+        console.log('Received message on data channel:', event.data);
         const messages = document.getElementById('messages');
         messages.innerHTML += `<div class="text-gray-600">Them: ${event.data}</div>`;
         messages.scrollTop = messages.scrollHeight;
@@ -92,19 +116,45 @@
 
       peerConnection.onicecandidate = (event) => {
         if (event.candidate) {
+          console.log('Sending ICE candidate for code:', code);
           socket.send(JSON.stringify({ type: 'candidate', candidate: event.candidate, code }));
         }
       };
 
+      peerConnection.onconnectionstatechange = () => {
+        console.log('Connection state:', peerConnection.connectionState);
+        if (peerConnection.connectionState === 'disconnected' || peerConnection.connectionState === 'failed') {
+          statusElement.textContent = 'Connection failed. Try again.';
+          clearTimeout(connectionTimeout);
+        }
+      };
+
       if (isInitiator) {
+        console.log('Creating offer as initiator for code:', code);
         peerConnection.createOffer().then(offer => {
-          peerConnection.setLocalDescription(offer);
-          socket.send(JSON.stringify({ type: 'offer', offer, code }));
+          return peerConnection.setLocalDescription(offer);
+        }).then(() => {
+          console.log('Sending offer for code:', code);
+          socket.send(JSON.stringify({ type: 'offer', offer: peerConnection.localDescription, code }));
+        }).catch(error => {
+          console.error('Error creating offer:', error);
         });
       }
+
+      // Set timeout to prevent hanging
+      connectionTimeout = setTimeout(() => {
+        if (!isConnected) {
+          statusElement.textContent = 'Connection timed out. Try again.';
+          console.log('Connection timed out for code:', code);
+          if (peerConnection) {
+            peerConnection.close();
+          }
+        }
+      }, 10000); // 10 seconds
     }
 
-    function handleOffer(offer) {
+    function handleOffer(offer, offerCode) {
+      console.log('Handling offer for code:', offerCode);
       peerConnection = new RTCPeerConnection({
         iceServers: [{ urls: 'stun:stun.l.google.com:19302' }]
       });
@@ -114,11 +164,14 @@
         dataChannel.onopen = () => {
           isConnected = true;
           statusElement.textContent = 'Connected!';
+          console.log('Data channel opened for code:', code);
           document.getElementById('connectContainer').classList.add('hidden');
           document.getElementById('chatContainer').classList.remove('hidden');
           document.getElementById('newSessionButton').classList.remove('hidden');
+          clearTimeout(connectionTimeout);
         };
         dataChannel.onmessage = (event) => {
+          console.log('Received message on data channel:', event.data);
           const messages = document.getElementById('messages');
           messages.innerHTML += `<div class="text-gray-600">Them: ${event.data}</div>`;
           messages.scrollTop = messages.scrollHeight;
@@ -127,24 +180,54 @@
 
       peerConnection.onicecandidate = (event) => {
         if (event.candidate) {
+          console.log('Sending ICE candidate for code:', code);
           socket.send(JSON.stringify({ type: 'candidate', candidate: event.candidate, code }));
         }
       };
 
+      peerConnection.onconnectionstatechange = () => {
+        console.log('Connection state:', peerConnection.connectionState);
+        if (peerConnection.connectionState === 'disconnected' || peerConnection.connectionState === 'failed') {
+          statusElement.textContent = 'Connection failed. Try again.';
+          clearTimeout(connectionTimeout);
+        }
+      };
+
       peerConnection.setRemoteDescription(new RTCSessionDescription(offer)).then(() => {
-        peerConnection.createAnswer().then(answer => {
-          peerConnection.setLocalDescription(answer);
-          socket.send(JSON.stringify({ type: 'answer', answer, code }));
-        });
+        console.log('Creating answer for code:', code);
+        return peerConnection.createAnswer();
+      }).then(answer => {
+        return peerConnection.setLocalDescription(answer);
+      }).then(() => {
+        console.log('Sending answer for code:', code);
+        socket.send(JSON.stringify({ type: 'answer', answer: peerConnection.localDescription, code }));
+      }).catch(error => {
+        console.error('Error handling offer:', error);
       });
+
+      connectionTimeout = setTimeout(() => {
+        if (!isConnected) {
+          statusElement.textContent = 'Connection timed out. Try again.';
+          console.log('Connection timed out for code:', code);
+          if (peerConnection) {
+            peerConnection.close();
+          }
+        }
+      }, 10000);
     }
 
     function handleAnswer(answer) {
-      peerConnection.setRemoteDescription(new RTCSessionDescription(answer));
+      console.log('Handling answer for code:', code);
+      peerConnection.setRemoteDescription(new RTCSessionDescription(answer)).catch(error => {
+        console.error('Error handling answer:', error);
+      });
     }
 
     function handleCandidate(candidate) {
-      peerConnection.addIceCandidate(new RTCIceCandidate(candidate));
+      console.log('Handling ICE candidate for code:', code);
+      peerConnection.addIceCandidate(new RTCIceCandidate(candidate)).catch(error => {
+        console.error('Error handling candidate:', error);
+      });
     }
 
     document.getElementById('connectButton').onclick = () => {
@@ -153,6 +236,7 @@
         code = inputCode;
         codeDisplayElement.textContent = `Using code: ${code}`;
         statusElement.textContent = 'Connecting...';
+        console.log('User B connecting with code:', code);
         socket.send(JSON.stringify({ type: 'join', code }));
         startPeerConnection();
       }
@@ -162,6 +246,7 @@
       const messageInput = document.getElementById('messageInput');
       const message = messageInput.value;
       if (message && isConnected) {
+        console.log('Sending message on data channel:', message);
         dataChannel.send(message);
         const messages = document.getElementById('messages');
         messages.innerHTML += `<div class="text-blue-600">You: ${message}</div>`;
@@ -173,15 +258,19 @@
     document.getElementById('newSessionButton').onclick = () => {
       if (peerConnection) {
         peerConnection.close();
+        console.log('Closed peer connection for code:', code);
       }
       if (dataChannel) {
         dataChannel.close();
+        console.log('Closed data channel for code:', code);
       }
+      clearTimeout(connectionTimeout);
       isConnected = false;
       isInitiator = false;
       code = generateCode();
       codeDisplayElement.textContent = `Your code: ${code}`;
       statusElement.textContent = 'Generating new code...';
+      console.log('New session started with code:', code);
       document.getElementById('messages').innerHTML = '';
       document.getElementById('messageInput').value = '';
       document.getElementById('codeInput').value = '';
